-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 14
-
Component/s: core-libs
-
b25
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8246464 | 13.0.4 | Matthias Baesken | P4 | Resolved | Fixed | b04 |
| JDK-8238850 | 11.0.7 | Matthias Baesken | P4 | Resolved | Fixed | b03 |
While experimenting with link time gc (-Wl,--gc-sections -Wl,--print-gc-sections) I noticed that NET_ReadV is found and marked as unused/dead code. So it should probably be removed from the codebase
- backported by
-
JDK-8238850 remove obsolete NET_ReadV
-
- Resolved
-
-
JDK-8246464 remove obsolete NET_ReadV
-
- Resolved
-