8234501: remove obsolete NET_ReadV

Reviewed-by: alanb, vtewari